--- a/preamble.tex
+++ b/preamble.tex
@@ -137,7 +137,7 @@
 \newcommand*{\ffrac}[2]{\left\lfloor\frac{#1}{#2}\right\rfloor}
 \newcommand*{\transpose}{{}^\text{T}}
 
-\title[JAM: Join-Accumulate Machine \\ {\smaller \textbf{Draft 0.2.2-pre \today}}]{Join-Accumulate Machine: A Semi-Coherent Scalable Trustless VM \\ {\smaller Draft 0.2.2-pre \today}}
+\title[JAM: Join-Accumulate Machine \\ {\smaller \textbf{Draft 0.2.2 \today}}]{Join-Accumulate Machine: A Semi-Coherent Scalable Trustless VM \\ {\smaller Draft 0.2.2 \today}}
 \author{
   Dr. Gavin Wood\\
   Founder, Polkadot \& Ethereum\\%, Parity, Web3 Foundation, Fellowship\\
