Ed25519 sigs are in judgements extrinsic

--- a/text/judgements.tex
+++ b/text/judgements.tex
@@ -21,7 +21,7 @@ The judgements state includes three items, an allow-set ($\psi_\mathbf{a}$), a b
 
 The judgements extrinsic, $\mathbf{E}_J$ may contain one or more judgements as a compilation of signatures coming from exactly two-thirds plus one of either the active validator set or the previous epoch's validator set, \ie the Ed25519 keys of $\kappa$ or $\lambda$:
 \begin{equation}
-  \mathbf{E}_J \in \seq{\tup{\H, \seq{\tup{\{\top, \bot\}, \N_{\mathsf{V}}, \mathbb{F}}}_{\floor{\nicefrac{2}{3}\mathsf{V}} + 1}}}\!\!\!
+  \mathbf{E}_J \in \seq{\tup{\H, \seq{\tup{\{\top, \bot\}, \N_{\mathsf{V}}, \mathbb{E}}}_{\floor{\nicefrac{2}{3}\mathsf{V}} + 1}}}\!\!\!
 \end{equation}
 
 All signatures must be valid in terms of one of the two allowed validator key-sets. Note that the two epoch's key-sets may not be mixed! Formally:
