--- a/text/reporting_assurance.tex
+++ b/text/reporting_assurance.tex
@@ -160,14 +160,17 @@ We define the permute function $P$, the rotation function $R$ and finally the gu
 \end{align}
 
 We also define $\mathbf{G}^*$, which is equivalent to the value $\mathbf{G}$ as it would have been under the previous rotation:
-\begin{align}
+\begin{equation}
   \label{eq:priorassignments}
-  \forall c \in \N_C : \mathbf{G}^* &\equiv [ \mathbf{k}_i \mid i \orderedin \N_\mathsf{V}, P(e, \tau' - \mathsf{R})_i = c ]\\
-  \where e &= \begin{cases}
-    (\eta'_2, \kappa) &\when \displaystyle\ffrac{\tau' - \mathsf{R}}{\mathsf{E}} = \ffrac{\tau'}{\mathsf{E}}\\
-    (\eta'_3, \lambda) &\otherwise
-  \end{cases}
-\end{align}
+  \begin{aligned}
+    \forall c \in \N_C : \mathbf{G}^* &\equiv [ \mathbf{k}_i \mid i \orderedin \N_\mathsf{V}, P(e, \tau' - \mathsf{R})_i = c ]\\
+    \where e &= \begin{cases}
+      (\eta'_2, \kappa') &\when \displaystyle\ffrac{\tau' - \mathsf{R}}{\mathsf{E}} = \ffrac{\tau'}{\mathsf{E}}\\
+      (\eta'_3, \lambda') &\otherwise
+    \end{cases}
+  \end{aligned}
+\end{equation}
+
 
 
 
