Don't immediately alter kappa mid-epoch as it affects off-chain judgements... ...Instead, apply the blacklist to guarantor sig verification directly.

--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -78,7 +78,7 @@
   \item[$\Xi$] The work result computation function. See equation \ref{eq:workresultfunction}. %	Ξ
   \item[$\Upsilon$] The general state transition function. See equations \ref{eq:statetransition}, \ref{eq:transitionfunctioncomposition}. %	ϒ
 %  \item[$\Sigma$] Unused. %	Σ
-%  \item[$\Phi$] Unused. %	Φ
+  \item[$\Phi$] The key-nullifier function. See equation \ref{eq:blacklistfilter}. %	Φ
   \item[$\Psi$] The whole-program \textsc{pvm} machine state-transition function. See equation \ref{sec:virtualmachine}. %	Ψ
   \begin{description}
     \item[$\Psi_1$] The single-step (\textsc{pvm}) machine state-transition function. See appendix \ref{sec:virtualmachine}. %	Ψ
