--- a/text/reporting_assurance.tex
+++ b/text/reporting_assurance.tex
@@ -156,15 +156,15 @@ We define the permute function $P$, the rotation function $R$ and finally the gu
 \begin{align}
   P(e, t) &\equiv R\left(\mathcal{F}\left(\left[\ffrac{\mathsf{V}\cdot i}{\mathsf{C}} \,\middle\mid\, i \orderedin \N_\mathsf{V}\right], e\right), \ffrac{t \bmod \mathsf{E}}{\mathsf{R}}\right)\!\!\!\!\!\! \\[3pt]
   R(\mathbf{c}, n) &\equiv [(x + n) \bmod \mathsf{C} \mid x \orderedin \mathbf{c}]\\
-  \forall c \in \N_C : \mathbf{G} &\equiv [ \kappa'_i \mid i \orderedin \N_\mathsf{V}, P(\eta_2', \tau')_i = c ]
+  \forall c \in \N_C : \mathbf{G} &\equiv [ \Phi(\kappa')_i \mid i \orderedin \N_\mathsf{V}, P(\eta_2', \tau')_i = c ]
 \end{align}
 
 We also define $\mathbf{G}^*$, which is equivalent to the value $\mathbf{G}$ as it would have been under the previous rotation:
 \begin{equation}
   \label{eq:priorassignments}
   \begin{aligned}
-    \forall c \in \N_C : \mathbf{G}^* &\equiv [ \mathbf{k}_i \mid i \orderedin \N_\mathsf{V}, P(e, \tau' - \mathsf{R})_i = c ]\\
-    \where e &= \begin{cases}
+    \forall c \in \N_C : \mathbf{G}^* &\equiv [ \Phi(\mathbf{k})_i \mid i \orderedin \N_\mathsf{V}, P(e, \tau' - \mathsf{R})_i = c ]\\
+    \where (e, \mathbf{k}) &= \begin{cases}
       (\eta'_2, \kappa') &\when \displaystyle\ffrac{\tau' - \mathsf{R}}{\mathsf{E}} = \ffrac{\tau'}{\mathsf{E}}\\
       (\eta'_3, \lambda') &\otherwise
     \end{cases}
@@ -194,7 +194,7 @@ We begin by defining the guarantees extrinsic, $\mathbf{E}_G$, a series of \emph
   \forall g &\in \mathbf{E}_G : |\{x \in g_a : x \ne \none\}| \ge 2
 \end{align}
 
-The credential is itself a sequence of three tuples of a signature and a validator index $\mathbb{E}$. Credentials may only have one missing signature.
+The credential is a sequence of three tuples of a signature. Credentials may only have one missing signature.
 
 The core index of each guarantee must be unique and in ascending order:
 \begin{align}
@@ -207,10 +207,10 @@ The signature must be one whose public key is that of the validator identified i
       &g_a[i] \in \sig{\mathbf{k}[g_c]_i}{\mathsf{X}_G\frown\mathcal{H}(g_c, g_r)}\mathbf{?}\\
       &\mathbf{R} \ni \mathbf{k}[g_c]_i \Leftrightarrow g_a[i] \ne \none\\
       &\where \mathbf{k} = \begin{cases}
-        \mathbf{G} \!\!\!\!&\when \ffrac{\tau'}{\mathsf{R}} = \ffrac{g_t}{\mathsf{R}} \\
+        \mathbf{G} \!\!\!\!&\when \displaystyle \ffrac{\tau'}{\mathsf{R}} = \ffrac{g_t}{\mathsf{R}} \\
         \mathbf{G}^* \!\!\!\!&\otherwise
       \end{cases}
-    \end{aligned}\right.\\
+    \end{aligned}\right.\!\!\\
     \mathsf{X}_G &= \token{\$jam\_guarantee}
 \end{align}
 
