--- a/text/header.tex
+++ b/text/header.tex
@@ -41,7 +41,7 @@ We assume the state-Merklization function $\mathcal{M}_\sigma$ is capable of tra
 
 All blocks have an associated public key to identify the author of the block. We identify this as an index into the current validator set $\kappa$. We denote the Bandersnatch key of the author as $\mathbf{H}_a$ though note that this is merely an equivalence, and is not serialized as part of the header.
 \begin{equation}
-  \mathbf{H}_k \in \N_\mathsf{V} \,,\quad \mathbf{H}_a \equiv \kappa[\mathbf{H}_k]
+  \mathbf{H}_k \in \N_\mathsf{V} \,,\quad \mathbf{H}_a \equiv \kappa'[\mathbf{H}_k]
 \end{equation}
 
 \subsection{The Epoch and Winning Tickets Markers}\label{sec:header_epochmarker}
