--- a/text/serialization.tex
+++ b/text/serialization.tex
@@ -132,7 +132,7 @@ A block $\mathbf{B}$ is serialized as a tuple of its elements in regular order, 
   \se(x \in \mathbb{X}) &\equiv \se(x_a, x_s, x_b, x_l)\concat\se_4(x_t)\concat\se(\maybe{x_p})\\
   \se(x \in \mathbb{S}) &\equiv \se(x_h) \concat \se_4(x_l)\concat\se(x_u) \\
   \se(x \in \mathbb{L}) &\equiv \se_4(x_s)\concat\se(x_c, x_l)\concat\se_8(x_g)\concat\se(O(x_o))\\
-  \se(x \in \mathbb{W}) &\equiv \se(x_a, \var{x_o}, x_x, x_s, \var{x_r}) \\
+  \se(x \in \mathbb{W}) &\equiv \se(x_a, x_c, \var{x_o}, x_x, x_s, \var{x_r}) \\
   \se(x \in \mathbb{P}) &\equiv \se(\var{x_\mathbf{j}}, \se_4(x_h), x_c, \var{x_\mathbf{p}}, x_\mathbf{x}, \var{x_\mathbf{i}}) \\
   \se(x \in \mathbb{C}) &\equiv \se(x_\mathbf{y}, x_r) \\
   O(o \in \mathbb{J} \cup \Y) &\equiv \begin{cases}
