--- a/text/judgements.tex
+++ b/text/judgements.tex
@@ -12,54 +12,77 @@ As mentioned, recording reports found to have a high confidence of invalidity is
 
 \subsection{State}
 
-The judgements state includes three items, an allow-set ($\psi_\mathbf{a}$), a ban-set ($\psi_\mathbf{b}$) and a punish-set ($\psi_\mathbf{p}$). The allow-set contains the hashes of all work-reports which were disputed and judged to be accurate. The ban-set contains the hashes of all work-reports which were disputed and whose accuracy could not be confidently confirmed. The punish-set is a set of Ed25519 keys representing validators which were found to have guaranteed a report which was confidently found to be invalid.
+The judgements state includes three items, an allow-set ($\psi_\mathbf{a}$), a ban-set ($\psi_\mathbf{b}$), a corrupt-set ($\psi_\mathbf{c}$) and a punish-set ($\psi_\mathbf{p}$). The allow-set, ban-set and corrupt-set contains the hashes of all work-reports which were respectively judged to be correct, uncertain or incorrect. The punish-set is a set of Ed25519 keys representing validators which were found to have misjudged a work-report.
 \begin{equation}
-  \psi \equiv \tup{\psi_\mathbf{a}, \psi_\mathbf{b}, \psi_\mathbf{p}}
+  \psi \equiv \tup{\psi_\mathbf{a}, \psi_\mathbf{b}, \psi_\mathbf{c}, \psi_\mathbf{p}}
 \end{equation}
 
 \subsection{Extrinsic}
 
-The judgements extrinsic, $\mathbf{E}_J$ may contain one or more judgements as a compilation of signatures coming from exactly two-thirds plus one of either the active validator set or the previous epoch's validator set, \ie the Ed25519 keys of $\kappa$ or $\lambda$:
-\begin{equation}
-  \mathbf{E}_J \in \seq{\tup{\H, \ffrac{\tau}{\mathsf{E}} - \N_2, \seq{\tup{\{\top, \bot\}, \N_{\mathsf{V}}, \mathbb{E}}}_{\floor{\nicefrac{2}{3}\mathsf{V}} + 1}}}\!\!\!
-\end{equation}
-
-All signatures must be valid in terms of one of the two allowed validator key-sets, identified by the second term which must be either the epoch index of the prior state or one less. Formally:
+The judgements extrinsic, $\mathbf{E}_J$ may contain one or more judgements $\mathbf{j}$ as a compilation of signatures coming from exactly two-thirds plus one of either the active validator set or the previous epoch's validator set, \ie the Ed25519 keys of $\kappa$ or $\lambda$. Additionally, it may contain signatures proving the misbehavior of one or more validators, either by guaranteeing a work-report found to be invalid in the sequence of culprits $\mathbf{c}$, or by signing a judgement vote (\ie audit result) found to be contradiction to a work-report's validity in the sequence of faults $\mathbf{f}$. Formally:
 \begin{equation}
   \begin{aligned}
-    \forall (r, a, \mathbf{v}) \in \mathbf{E}_J ,\, &\forall (v, i, s) \in \mathbf{v} : s \in \sig{\mathbf{k}[i]_e}{\mathsf{X}_v \concat r}\\
-    \where \mathsf{X}_\top &= \text{{\small \texttt{\$jam\_valid}}} \\
-    \text{and } \mathsf{X}_\bot &= \text{{\small \texttt{\$jam\_invalid}}} \\
-    \mathbf{k} &= \begin{cases}
-      \kappa &\when a = \displaystyle \ffrac{\tau}{\mathsf{E}}\\
-      \lambda &\otherwise\\
-    \end{cases}
+    \mathbf{E}_J &\equiv (\mathbf{j}, \mathbf{c}, \mathbf{f}) \\
+    \where \mathbf{j} &\in \seq{\tup{\H, \ffrac{\tau}{\mathsf{E}} - \N_2, \seq{\tup{\{\top, \bot\}, \N_{\mathsf{V}}, \mathbb{E}}}_{\floor{\nicefrac{2}{3}\mathsf{V}} + 1}}}\\
+    \also \mathbf{c} &\in \seq{\H, \H_E, \mathbf{E}} \,,\quad
+    \mathbf{f} \in \seq{\H, \H_E, \mathbf{E}}
   \end{aligned}
 \end{equation}
 
-Judgements must be ordered by report hash and there may be no duplicate report hashes within the extrinsic, nor amongst any past reported hashes. Formally:
+Each judgement in $\mathbf{j}$ implies at least two items with the same report hash in the sequence of culprits $\mathbf{c}$ and at least one item with the same report hash in the sequence of faults $\mathbf{f}$. Formally:
+\begin{equation}
+  \forall (r, \dots) \in \mathbf{j} : |\{(r, \dots) \in \mathbf{c}\}| \ge 2 \wedge \exists (r, \dots) \in \mathbf{f}
+\end{equation}
+
+All judgement signatures must be valid in terms of one of the two allowed validator key-sets, identified by the second term which must be either the epoch index of the prior state or one less. Formally:
 \begin{align}
-  \mathbf{E}_J = \orderuniqby{r}{\tup{r, \mathbf{v}} \in \mathbf{E}_J} \\
-  \{r \mid \tup{r, \mathbf{v}}\} \disjoint \psi_\mathbf{a} \cup \psi_\mathbf{b}
+  &\begin{aligned}
+    &\forall (r, a, \mathbf{v}) \in \mathbf{j}, \forall (v, i, s) \in \mathbf{v} : s \in \sig{\mathbf{k}[i]_e}{\mathsf{X}_v \concat r}\\
+    &\quad\where \mathbf{k} = \begin{cases}
+      \kappa &\when a = \displaystyle \ffrac{\tau}{\mathsf{E}}\\
+      \lambda &\otherwise\\
+    \end{cases}
+  \end{aligned}\\
+  &\mathsf{X}_\top \equiv \text{{\small \texttt{\$jam\_valid}}}\,,\ \mathsf{X}_\bot \equiv \text{{\small \texttt{\$jam\_invalid}}}
+\end{align}
+
+Culprit and fault signatures must be similarly valid and reference work-reports with judgements and may not report targets which are already in the punish-set:
+\begin{align}
+  &\begin{aligned}
+      &\forall (r, k, s) \in \mathbf{c} :\\
+      &\quad r \in \varphi'_\mathbf{b} \cup \varphi'_\mathbf{c} \wedge
+      k \in (\lambda \cup \kappa) \setminus \varphi_\mathbf{p} \wedge
+      s \in \sig{k}{\mathsf{X}_G \frown r}
+  \end{aligned}\\
+  &\begin{aligned}
+      &\forall (r, k, s) \in \mathbf{f} :\\
+      &\quad r \in \varphi'_\mathbf{a} \cup \varphi'_\mathbf{c} \wedge
+      k \in (\lambda \cup \kappa) \setminus \varphi_\mathbf{p} \wedge
+      s \in \sig{k}{\mathsf{X}_{r \in \varphi'_\mathbf{c}} \concat r}\\
+  \end{aligned}
+\end{align}
+
+Judgements $\mathbf{j}$ must be ordered by report hash, culprit signatures $\mathbf{c}$ and $\mathbf{f}$ ordered by culprit identity. There may be no duplicate report hashes within the extrinsic, nor amongst any past reported hashes. Formally:
+\begin{align}
+  &\mathbf{j} = \orderuniqby{r}{\tup{r, a, \mathbf{v}} \in \mathbf{j}}\\
+  &\{r \mid \tup{r, a, \mathbf{v}} \in \mathbf{j}\} \disjoint \psi_\mathbf{a} \cup \psi_\mathbf{b}
 \end{align}
 
 The votes of all judgements must be ordered by validator index and there may be no duplicate such indices. Formally:
 \begin{equation}
-  \forall (r, \mathbf{v}) \in \mathbf{E}_J : \mathbf{v} = \orderuniqby{i}{\tup{v, i, s} \in \mathbf{v}}
+  \forall (r, a, \mathbf{v}) \in \mathbf{j} : \mathbf{v} = \orderuniqby{i}{\tup{v, i, s} \in \mathbf{v}}
 \end{equation}
 
-We define $\mathbf{J}$ as the sequence of judgements introduced in the block's extrinsic (and ordered respectively), with the sequence of signatures substituted with the sum of votes over the signatures. We require this total to be exactly zero, two-thirds-plus-one or one-third-plus-one of the validator set indicating, respectively, that we are confident of the report's validity, confident of its invalidity, or lacking confidence in either. This requirement may seem somewhat arbitrary, but these happen to be the decision thresholds for our three possible actions and are acceptable since the security assumptions include the requirement that at least two-thirds-plus-one validators are live (\cite{cryptoeprint:2024/961} discusses the security implications in depth).
-
-Formally:
+We define $\mathbf{J}$ as the sequence of judgements introduced in the block's extrinsic (and ordered respectively), with the sequence of signatures substituted with the sum of votes over the signatures. We require this total to be exactly zero, two-thirds-plus-one or one-third-plus-one of the validator set indicating, respectively, that we are confident of the report's validity, confident of its invalidity, or lacking confidence in either. This requirement may seem somewhat arbitrary, but these happen to be the decision thresholds for our three possible actions and are acceptable since the security assumptions include the requirement that at least two-thirds-plus-one validators are live (\cite{cryptoeprint:2024/961} discusses the security implications in depth). Formally:
 \begin{align}
   \mathbf{J} &\in \seq{\tup{\H, \N}} \\
-  \mathbf{J} &= \sq{\tup{r, \sum_{\tup{v, i, s} \in \mathbf{v}}\!\!\!\! v}\ \middle\mid\ \tup{r, \mathbf{v}} \orderedin \mathbf{E}_J} \\
+  \mathbf{J} &= \sq{\tup{r, \sum_{\tup{v, i, s} \in \mathbf{v}}\!\!\!\! v}\ \middle\mid\ \tup{r, a, \mathbf{v}} \orderedin \mathbf{j}} \\
   &\forall \tup{r, t} \in \mathbf{J} : t \in \{0, \floor{\nicefrac{1}{3}\mathsf{V}}, \floor{\nicefrac{2}{3}\mathsf{V}} + 1 \}
 \end{align}
 
 Note that $t$ is the threshold of judgements that the report is \emph{valid}, calculated by summing Boolean values in their implicit equivalence to binary digits of the set $\N_2$.
 
-We clear any work-reports judged to be non-valid from their core:
+We clear any work-reports which we judged as uncertain or invalid from their core:
 \begin{equation}
   \forall c \in \N_\mathsf{C} : \rho^\dagger[c] = \begin{cases}
     \none &\when \{ (\rho[c]_r, t) \in \mathbf{J}, t < \floor{\nicefrac{2}{3}\mathsf{V}} \} \\
@@ -67,14 +90,13 @@ We clear any work-reports judged to be non-valid from their core:
   \end{cases}
 \end{equation}
 
-The allow-set assimilates the hashes of any reports we judge to be valid. The ban-set assimilates any other judged report-hashes. Finally, the punish-set accumulates the guarantor keys of any report judged to be invalid:
+The allow-set, ban-set and corrupt-set assimilates the hashes of any reports we judge to be valid, uncertain or invalid. Finally, the punish-set accumulates the keys of any validators who have found to have misjudged a report. Formally:
 \begin{align}
   \psi'_\mathbf{a} &\equiv \psi_\mathbf{a} \cup \{r \mid \tup{r, \floor{\nicefrac{2}{3}\mathsf{V}} + 1} \in \mathbf{J} \} \\
-  \psi'_\mathbf{b} &\equiv \psi_\mathbf{b} \cup \{r \mid \tup{r, t} \in \mathbf{J}, t \ne \floor{\nicefrac{2}{3}\mathsf{V}} + 1 \} \\
-  \psi'_\mathbf{p} &\equiv \psi_\mathbf{p} \cup \{ \rho[c]_g \mid (\rho[c]_r, 0) \in \mathbf{J} \}
+  \psi'_\mathbf{b} &\equiv \psi_\mathbf{b} \cup \{r \mid \tup{r, \floor{\nicefrac{1}{3}\mathsf{V}}} \in \mathbf{J} \} \\
+  \psi'_\mathbf{c} &\equiv \psi_\mathbf{c} \cup \{r \mid \tup{r, 0} \in \mathbf{J} \} \\
+  \psi'_\mathbf{p} &\equiv \psi_\mathbf{p} \cup \{ k \mid (r, k, s) \in \mathbf{c} \cup \mathbf{f} \}
 \end{align}
-
-Note that the augmented punish-set is utilized when determining $\kappa'$ to nullify any validator keys which appear in the punish-list.
 
 \subsection{Header}\label{sec:judgementmarker}
 
