Rework guarantee extrinsic

--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -35,7 +35,7 @@ The Is-Authorized invocation is the first and simplest of the four, being totall
 
 \begin{align}
   \Psi_I &\colon \left\{\begin{aligned}
-    (\mathbb{P}, \N_C) &\to \Y \cup \mathbb{J} \\
+    (\mathbb{P}, \N_\mathsf{C}) &\to \Y \cup \mathbb{J} \\
     (\mathbf{p}, c) &\mapsto \begin{cases}
       \mathbf{r} &\otherwhen \mathbf{r} \in \{ \oog, \panic \}  \\
       \mathbf{o} &\otherwhen \mathbf{r} = \tup{g, \mathbf{o}} \\
