--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -138,7 +138,7 @@ We now come to the work result computation function $\Xi$. This forms the basis 
 Formally:
 \begin{equation}\label{eq:workresultfunction}
   \!\!\Xi \colon \left\{\begin{aligned}
-    (\mathbb{P}, \N_C) &\to \mathbb{W} \\
+    (\mathbb{P}, \N_\mathsf{C}) &\to \mathbb{W} \\
     (\mathbf{p}, c) &\mapsto \begin{cases}
         \error &\when \mathbf{o} \not\in \Y \\
         \tup{\is{a}{\mathbf{p}_a}, \mathbf{o}, \is{x}{\mathbf{p}_x}, s, \mathbf{r}} \!\!\!\!\!&\otherwise
